force-app/main/default/objects/PgM_RAID_Log__c/PgM_RAID_Log__c.object-meta.xml
<CustomObject>
    <label>RAID Log</label>
    <nameField>
        <displayFormat>RAID-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAID Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>