force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Age__c.field-meta.xml
<CustomField>
    <fullName>PgM_Age__c</fullName>
    <formula>TODAY()- DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>