force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Approval_Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>PgM_Approval_Lifecycle__c</fullName>
    <label>Approval Lifecycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Ready for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Yet Submitted</fullName>
                <isActive>false</isActive>
                <label>Not Yet Submitted</label>
            </value>
            <value>
                <fullName>Returned</fullName>
                <isActive>false</isActive>
                <label>Returned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>