force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>PgM_Close_Date__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>