force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Closed_By__c.field-meta.xml
<CustomField>
    <fullName>PgM_Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RAID_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>