force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Closure_Review__c.field-meta.xml
<CustomField>
    <fullName>PgM_Closure_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box to require a review by the Created By user prior to closing a RAID item.</inlineHelpText>
    <label>Closure Review</label>
    <type>Checkbox</type>
</CustomField>