force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Current_Approver__c.field-meta.xml
<CustomField>
    <fullName>PgM_Current_Approver__c</fullName>
    <formula>$User.Id =  PgM_Primary_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Approver</label>
    <type>Checkbox</type>
</CustomField>