force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Current_Update__c.field-meta.xml
<CustomField>
    <fullName>PgM_Current_Update__c</fullName>
    <label>Current Update</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>