force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Current_User__c.field-meta.xml
<CustomField>
    <fullName>PgM_Current_User__c</fullName>
    <formula>if(PgM_Primary_Owner__c =  $User.Id ||
   PgM_Secondary_Owner__c = $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User</label>
    <type>Checkbox</type>
</CustomField>