force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>PgM_Days_Overdue__c</fullName>
    <formula>if(TODAY() -  PgM_Due_Date__c &gt; 0, TODAY() -  PgM_Due_Date__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>