force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>PgM_Decision_Date__c</fullName>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>