force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Decision_Made__c.field-meta.xml
<CustomField>
    <fullName>PgM_Decision_Made__c</fullName>
    <label>Decision Made</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>