force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Due_Date_Changes__c.field-meta.xml
<CustomField>
    <fullName>PgM_Due_Date_Changes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Due Date Changes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>