force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Impact_to__c.field-meta.xml
<CustomField>
    <fullName>PgM_Impact_to__c</fullName>
    <label>Impact to</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Release 1</fullName>
            </value>
            <value>
                <fullName>Release 2</fullName>
            </value>
            <value>
                <fullName>Release 3</fullName>
            </value>
            <value>
                <fullName>Release 4</fullName>
            </value>
            <value>
                <fullName>Release 5</fullName>
            </value>
            <value>
                <fullName>Release 6</fullName>
            </value>
            <value>
                <fullName>Release 7</fullName>
            </value>
            <value>
                <fullName>Release 8</fullName>
            </value>
            <value>
                <fullName>Not Release Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>