force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Key_Considerations__c.field-meta.xml
<CustomField>
    <fullName>PgM_Key_Considerations__c</fullName>
    <label>Key Considerations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>