force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_L1_Capability__c.field-meta.xml
<CustomField>
    <fullName>PgM_L1_Capability__c</fullName>
    <label>L1 Capability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PgM_L1_Capabilities</valueSetName>
    </valueSet>
</CustomField>