force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Last_Modified_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>PgM_Last_Modified_Age_Days__c</fullName>
    <formula>TODAY() -  DATEVALUE( LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>