force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>PgM_Likelihood__c</fullName>
    <label>Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PgM_Likelihood</valueSetName>
    </valueSet>
</CustomField>