force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>PgM_Mitigation_Plan__c</fullName>
    <label>Mitigation Plan</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>