force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Moderation_Status__c.field-meta.xml
<CustomField>
    <fullName>PgM_Moderation_Status__c</fullName>
    <label>Moderation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted - In Review</fullName>
                <default>true</default>
                <label>Submitted - In Review</label>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Not Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>