force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Original_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>PgM_Original_Due_Date__c</fullName>
    <label>Original Due Date</label>
    <type>Date</type>
</CustomField>