force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Overdue_Count__c.field-meta.xml
<CustomField>
    <fullName>PgM_Overdue_Count__c</fullName>
    <formula>IF( PgM_Days_Overdue__c &gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>