force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_PM_Email__c.field-meta.xml
<CustomField>
    <fullName>PgM_PM_Email__c</fullName>
    <label>Project Manager Email</label>
    <type>Email</type>
</CustomField>