force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>PgM_Primary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RAID_Log_Items</relationshipName>
    <type>Lookup</type>
</CustomField>