force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Program__c.field-meta.xml
<CustomField>
    <fullName>PgM_Program__c</fullName>
    <formula>PgM_Workstream_Parent__r.PgM_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program</label>
    <type>Text</type>
</CustomField>