force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Project_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>PgM_Project_Manager_Email__c</fullName>
    <formula>PgM_Workstream_Parent__r.PgM_Project_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager Email</label>
    <type>Text</type>
</CustomField>