force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Project_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>PgM_Project_Manager_Name__c</fullName>
    <formula>PgM_Workstream_Parent__r.PgM_Project_Manager__r.FirstName + &apos; &apos; +  PgM_Workstream_Parent__r.PgM_Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager Name</label>
    <type>Text</type>
</CustomField>