force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Proximity__c.field-meta.xml
<CustomField>
    <fullName>PgM_Proximity__c</fullName>
    <label>Proximity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PgM_Proximity</valueSetName>
    </valueSet>
</CustomField>