force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>PgM_Resolution_Date__c</fullName>
    <label>Resolution Date</label>
    <type>Date</type>
</CustomField>