force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>PgM_Resolution_Status__c</fullName>
    <inlineHelpText>Resolved - risk is no longer a concern.
Owned - assigned owner of risk that cannot be resolved during PI planning.
Accepted - risk is accepted as is.
Mitigated - impact of the risk has been reduced.</inlineHelpText>
    <label>Resolution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Mitigated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>