force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Risk_Indicator__c.field-meta.xml
<CustomField>
    <fullName>PgM_Risk_Indicator__c</fullName>
    <formula>If( PgM_Risk_Score__c &lt; 15, IMAGE(&quot;/resource/PgM_Green_Indicator&quot;,&quot;Green&quot;),
If( PgM_Risk_Score__c &lt; 55, IMAGE(&quot;/resource/PgM_Amber_Indicator&quot;,&quot;Yellow&quot;),
IMAGE(&quot;/resource/PgM_Red_Indicator&quot;,&quot;Red&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk</label>
    <type>Text</type>
</CustomField>