force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>PgM_Risk_Score__c</fullName>
    <formula>VALUE(LEFT(TEXT( PgM_Severity_Level__c ),1)) * VALUE(LEFT(TEXT(PgM_Likelihood__c),1)) * VALUE(LEFT(TEXT(PgM_Proximity__c),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>