force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>PgM_Secondary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Secondary_Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>