force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>PgM_Severity_Level__c</fullName>
    <label>Severity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PgM_Severity</valueSetName>
    </valueSet>
</CustomField>