force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Status__c.field-meta.xml
<CustomField>
    <fullName>PgM_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Closed - Pending Review</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Ready for Approval</fullName>
                <isActive>false</isActive>
                <label>Ready for Approval</label>
            </value>
            <value>
                <fullName>Returned</fullName>
                <isActive>false</isActive>
                <label>Returned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>