force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Visibility__c.field-meta.xml
<CustomField>
    <fullName>PgM_Visibility__c</fullName>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Workstream</fullName>
                <default>true</default>
                <label>1 - Workstream</label>
            </value>
            <value>
                <fullName>2 - PMO</fullName>
            </value>
            <value>
                <fullName>3 - Operating Committee</fullName>
            </value>
            <value>
                <fullName>4 - Steering Committee</fullName>
            </value>
            <value>
                <fullName>0 - Pending Review</fullName>
                <isActive>false</isActive>
                <label>0 - Pending Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>