force-app/main/default/objects/PgM_RAID_Log__c/fields/PgM_Workstream_Parent__c.field-meta.xml
<CustomField>
    <fullName>PgM_Workstream_Parent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Workstream</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PgM_Workstream__c.PgM_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PgM_Workstream__c</referenceTo>
    <relationshipLabel>RAID Logs</relationshipLabel>
    <relationshipName>RAID_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>