force-app/main/default/objects/PgM_RAID_Log__c/recordTypes/PgM_Action_Item.recordType-meta.xml
<RecordType>
    <fullName>PgM_Action_Item</fullName>
    <active>true</active>
    <label>Action Item</label>
</RecordType>