force-app/main/default/objects/PgM_RAID_Log__c/recordTypes/PgM_Decision.recordType-meta.xml
<RecordType>
    <fullName>PgM_Decision</fullName>
    <active>true</active>
    <label>Decision</label>
</RecordType>