force-app/main/default/objects/PgM_RAID_Log__c/recordTypes/PgM_Issue.recordType-meta.xml
<RecordType>
    <fullName>PgM_Issue</fullName>
    <active>true</active>
    <label>Issue</label>
</RecordType>