force-app/main/default/objects/PgM_RAID_Log__c/recordTypes/PgM_Risk.recordType-meta.xml
<RecordType>
    <fullName>PgM_Risk</fullName>
    <active>true</active>
    <label>Risk</label>
</RecordType>