force-app/main/default/objects/PgM_RAID_Log__c/validationRules/Closure_Review_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Closure_Review_Locked</fullName>
    <active>true</active>
    <description>The Closure Review checkbox can only be modified by the Created By user.</description>
    <errorConditionFormula>CreatedById  &lt;&gt;  $User.Id &amp;&amp;
ISCHANGED( PgM_Closure_Review__c )</errorConditionFormula>
    <errorDisplayField>PgM_Closure_Review__c</errorDisplayField>
    <errorMessage>Only the Created By user may change the Closure Review checkbox.</errorMessage>
</ValidationRule>