force-app/main/default/objects/PgM_RAID_Log__c/validationRules/Decision_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Decision_Date_is_Required</fullName>
    <active>true</active>
    <description>Decision Date is required before submitting for Approval.</description>
    <errorConditionFormula>ISPICKVAL( PgM_Status__c, &apos;Ready for Approval&apos;) &amp;&amp; 
RecordType.Name = &apos;Decision&apos; &amp;&amp;
ISBLANK( PgM_Decision_Date__c )</errorConditionFormula>
    <errorDisplayField>PgM_Decision_Date__c</errorDisplayField>
    <errorMessage>Please enter a Decision Date before submitting for approval.</errorMessage>
</ValidationRule>