force-app/main/default/objects/PgM_RAID_Log__c/validationRules/Decision_Submit_Approval_and_is_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Decision_Submit_Approval_and_is_Locked</fullName>
    <active>true</active>
    <description>Prevents edits to Decision records that are Submitted for Approval and Locked</description>
    <errorConditionFormula>((ISCHANGED(PgM_Decision_Date__c)) || 
(ISCHANGED(PgM_Decision_Made__c)) ||  
(ISCHANGED(PgM_Description__c)) || 
(ISCHANGED(PgM_Due_Date__c)) || 
(ISCHANGED(PgM_L1_Capability__c)) || 
(ISCHANGED(PgM_Impact_to__c)) || 
(ISCHANGED(PgM_Key_Considerations__c)) || 
(ISCHANGED(PgM_Workstream_Parent__c)) || 
(ISCHANGED(PgM_Primary_Owner__c)) || 
(ISCHANGED(PgM_Secondary_Owner__c)) || 
(ISCHANGED(PgM_Status__c)) || 
(ISCHANGED(PgM_Visibility__c))) &amp;&amp;
PgM_Record_Locked__c = true &amp;&amp;
PgM_Current_Approver__c  = false &amp;&amp;
ISPICKVAL(PgM_Approval_Lifecycle__c, &apos;Submitted for Approval&apos;)</errorConditionFormula>
    <errorMessage>The Decision has been submitted for approval and the record is locked.</errorMessage>
</ValidationRule>