force-app/main/default/objects/PgM_RAID_Log__c/validationRules/Description_is_a_Required_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_a_Required_Field</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( PgM_Description__c )</errorConditionFormula>
    <errorDisplayField>PgM_Description__c</errorDisplayField>
    <errorMessage>Please enter a Description</errorMessage>
</ValidationRule>