force-app/main/default/objects/PgM_RAID_Log__c/validationRules/Due_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_is_Required</fullName>
    <active>true</active>
    <description>Due Date is a required field for Action Items</description>
    <errorConditionFormula>ISBLANK( PgM_Due_Date__c )</errorConditionFormula>
    <errorDisplayField>PgM_Due_Date__c</errorDisplayField>
    <errorMessage>Please enter a Due Date.</errorMessage>
</ValidationRule>