force-app/main/default/objects/PgM_RAID_Log__c/validationRules/Resolution_Status_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Status_is_Required</fullName>
    <active>true</active>
    <description>Resolution Status is required when a risk is closed.</description>
    <errorConditionFormula>ISBLANK(TEXT( PgM_Resolution_Status__c )) &amp;&amp;
RecordType.Name = &apos;Risk&apos; &amp;&amp;
(ISPICKVAL( PgM_Status__c , &quot;Closed&quot;) ||
ISPICKVAL( PgM_Status__c, &apos;Closed - Pending Review&apos;))</errorConditionFormula>
    <errorDisplayField>PgM_Resolution_Status__c</errorDisplayField>
    <errorMessage>Resolution Status is required when a Risk is Closed.</errorMessage>
</ValidationRule>