force-app/main/default/objects/PgM_RAID_Log__c/validationRules/Review_Required_Before_Closure.validationRule-meta.xml
<ValidationRule>
    <fullName>Review_Required_Before_Closure</fullName>
    <active>true</active>
    <description>Created By user must review a RAID item before the Status is set to Closed.</description>
    <errorConditionFormula>PgM_Closure_Review__c  = true &amp;&amp;
ISPICKVAL(PgM_Status__c, &apos;Closed&apos;) &amp;&amp;
CreatedById &lt;&gt; $User.Id</errorConditionFormula>
    <errorDisplayField>PgM_Status__c</errorDisplayField>
    <errorMessage>Set the Status to Closed - Pending Review.</errorMessage>
</ValidationRule>