force-app/main/default/objects/PgM_RAID_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PgM_Description__c</columns>
    <columns>PgM_Workstream_Parent__c</columns>
    <columns>PgM_Primary_Owner__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PgM_Due_Date__c</columns>
    <columns>PgM_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>