force-app/main/default/objects/PgM_RAID_Log__c/listViews/All_RAID_Items.listView-meta.xml
<ListView>
    <fullName>All_RAID_Items</fullName>
    <columns>NAME</columns>
    <columns>PgM_Description__c</columns>
    <columns>PgM_Workstream_Parent__c</columns>
    <columns>PgM_Primary_Owner__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PgM_Due_Date__c</columns>
    <columns>PgM_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PgM_Status__c</field>
        <operation>equals</operation>
        <value>Open,Overdue,New</value>
    </filters>
    <label>All - Open / Overdue</label>
</ListView>