force-app/main/default/objects/PgM_RAID_Log__c/listViews/My_RAID_Log.listView-meta.xml
<ListView>
    <fullName>My_RAID_Log</fullName>
    <columns>NAME</columns>
    <columns>PgM_Description__c</columns>
    <columns>PgM_Workstream_Parent__c</columns>
    <columns>PgM_Primary_Owner__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PgM_Due_Date__c</columns>
    <columns>PgM_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PgM_Status__c</field>
        <operation>equals</operation>
        <value>Open,Overdue,Pending Approval,Returned,Accepted</value>
    </filters>
    <filters>
        <field>PgM_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My RAID Log - Open Items</label>
</ListView>